--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "axios": "^1.6.5",
+    "axios": "^1.6.6",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "dotenv": "^16.3.1",
     "highcharts": "^11.3.0",
     "highcharts-react-official": "^3.2.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
